--- a/public/locale/fr/LC_MESSAGES/django.po
+++ b/public/locale/fr/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-12-04 10:22+0000\n"
+"POT-Creation-Date: 2025-12-04 10:31+0000\n"
 "PO-Revision-Date: 2025-12-03 15:00:00+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -45,3 +45,9 @@ msgstr "Score global :"
 
 msgid "Overview"
 msgstr "Aperçu"
+
+msgid "Projects with this tag"
+msgstr "Projets avec ce tag"
+
+msgid "No projects found with this tag."
+msgstr "Aucun projet trouvé avec ce tag."
