--- a/public/locale/fr/LC_MESSAGES/django.po
+++ b/public/locale/fr/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-12-08 15:43+0000\n"
+"POT-Creation-Date: 2026-01-12 11:48+0000\n"
 "PO-Revision-Date: 2025-12-03 15:00:00+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -46,6 +46,24 @@ msgstr "Légende des scores :"
 msgid "No projects selected for comparison."
 msgstr "Aucun projet sélectionné pour la comparaison."
 
+msgid "Home"
+msgstr "Accueil"
+
+msgid "Historical metric trends"
+msgstr "Tendances historiques des métriques"
+
+msgid "No metric data available"
+msgstr "Aucune donnée de métrique disponible"
+
+msgid "There is currently no historical data collected for this field."
+msgstr "Il n'y a actuellement aucune donnée historique collectée pour ce champ."
+
+msgid "Back to Project"
+msgstr "Retour au projet"
+
+msgid "Source"
+msgstr "Source"
+
 msgid "Featured Projects"
 msgstr "Projets en vedette"
 
@@ -76,6 +94,9 @@ msgstr "Visiter le site"
 msgid "Overall Score:"
 msgstr "Score global :"
 
+msgid "Overview"
+msgstr "Aperçu"
+
 msgid "Compare with Other Projects"
 msgstr "Comparer avec d'autres projets"
 
@@ -83,10 +104,8 @@ msgid "Select projects to compare (1-4):"
 msgstr "Sélectionnez les projets à comparer (1-4) :"
 
 msgid "Hold Ctrl (Windows) or Cmd (Mac) to select multiple projects"
-msgstr "Maintenez Ctrl (Windows) ou Cmd (Mac) pour sélectionner plusieurs projets"
-
-msgid "Overview"
-msgstr "Aperçu"
+msgstr ""
+"Maintenez Ctrl (Windows) ou Cmd (Mac) pour sélectionner plusieurs projets"
 
 msgid "Please select between 1 and 4 projects to compare."
 msgstr "Veuillez sélectionner entre 1 et 4 projets à comparer."
